--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -4,18 +4,25 @@
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.tsx",
-    "src/preload/*.d.ts"
+    "src/preload/*.d.ts",
+    "src/shared/**/*"
   ],
   "compilerOptions": {
     "composite": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/renderer/src/*"
+      "@/": [
+        "./src/renderer/src/"
+      ],
+      "@preload/*": [
+        "./src/preload/*"
       ],
       "@renderer/*": [
-        "src/renderer/src/*"
+        "./src/renderer/src/*"
+      ],
+      "@shared/*": [
+        "./src/shared/*"
       ]
     }
   }
