fix the import prefix warning

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,5 +4,11 @@
   "compilerOptions": {
     "composite": true,
     "types": ["electron-vite/node"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/main/*"],
+      "@shared/*": ["src/shared/*"],
+      "@preload/*": ["src/preload/*"]
+    }
   }
 }
