--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -21,6 +21,9 @@
       ],
       "@shared/*": [
         "src/shared/*"
+      ],
+      "@preload/*": [
+        "src/preload/*"
       ]
     }
   }
