--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
       ],
       "@shared/*": [
         "./src/shared/*"
+      ],
+      "@preload/*": [
+        "./src/preload/*"
       ]
     }
   }
