--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -4,7 +4,7 @@
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.tsx",
-    "src/preload/*.d.ts",
+    "src/preload/*.ts",
     "src/shared/**/*"
   ],
   "compilerOptions": {
@@ -13,17 +13,11 @@
     "noUnusedLocals": false,
     "baseUrl": ".",
     "paths": {
-      "@renderer/*": [
-        "src/renderer/src/*"
-      ],
       "@/*": [
         "src/renderer/src/*"
       ],
       "@shared/*": [
         "src/shared/*"
-      ],
-      "@preload/*": [
-        "src/preload/*"
       ]
     }
   }
