fix path for shadcn component installation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,4 +8,10 @@
       "path": "./tsconfig.web.json"
     }
   ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/renderer/src/*"]
+    }
+  }
 }
